force-app/main/default/objects/Automation_Log__c/fields/Apex_Function_Flow_Element__c.field-meta.xml
<CustomField>
    <fullName>Apex_Function_Flow_Element__c</fullName>
    <description>This field stores the Apex Function or Flow Element where the error occurred.</description>
    <label>Apex Function / Flow Element</label>
    <length>255</length>
    <type>Text</type>
</CustomField>