force-app/main/default/objects/Automation_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <complianceGroup>GDPR (Financial);GDPR</complianceGroup>
    <description>This field stores the detailed error message of the Apex Class or Flow.</description>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>