force-app/main/default/objects/Automation_Log__c/fields/Triggering_Record__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Record__c</fullName>
    <complianceGroup>GDPR (Salesforce Id)</complianceGroup>
    <description>This field redirects the user to the record where the error occurred.</description>
    <formula>IF(
NOT(ISBLANK(Triggering_Record_Id__c)), 

HYPERLINK(&apos;/&apos; &amp;  Triggering_Record_Id__c , &apos;Open &apos; &amp;  $Label.TriggeringRecord , &apos;_self&apos;),

$Label.NoTriggeringRecordLinked
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Triggering Record</label>
    <type>Text</type>
</CustomField>