force-app/main/default/objects/Automation_Log__c/fields/Triggering_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Record_Id__c</fullName>
    <complianceGroup>GDPR (Salesforce Id)</complianceGroup>
    <description>The Record Id of the record that triggers the logging.</description>
    <label>Triggering Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>