force-app/main/default/objects/Automation_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field stores the type of automation.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex Class</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>