force-app/main/default/objects/Automation_Log__c/listViews/Last_7_Days.listView-meta.xml
<ListView>
    <fullName>Last_7_Days</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class_Flow_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Afgelopen 7 dagen</label>
</ListView>