force-app/main/default/objects/Automation_Log__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class_Flow_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Vandaag</label>
</ListView>